tarstream encoding works!

--- a/packages/app/index.html
+++ b/packages/app/index.html
@@ -2,3 +2,4 @@
 
 <script src="http://localhost:8080/main.js"></script>
 <script type="module" src="./index.js"></script>
+<a href="/tartest">Download tarfile</a>
