--- a/packages/builder/test/index.html
+++ b/packages/builder/test/index.html
@@ -8,6 +8,6 @@
   <body>
     <div id="qunit"></div>
     <div id="qunit-fixture"></div>
-    <script src="./tests.js"></script>
+    <script src="./test.js"></script>
   </body>
 </html>
