Adding acceptance test support

--- a/packages/builder/test/index.html
+++ b/packages/builder/test/index.html
@@ -8,6 +8,10 @@
   <body>
     <div id="qunit"></div>
     <div id="qunit-fixture"></div>
+    <script src="./service-worker-test-entrypoint.js"></script>
     <script src="./test.js"></script>
+    <script src="./main-test.js"></script>
+
+    <div id="test-container"></div>
   </body>
 </html>
