--- a/packages/app/test/index.html
+++ b/packages/app/test/index.html
@@ -15,6 +15,9 @@
     <script src="http://localhost:8080/main.js"></script>
     <script src="https://code.jquery.com/qunit/qunit-2.10.0.js"></script>
     <script type="module" src="index.js"></script>
+    <script>
+      window.testing = true;
+    </script>
   </body>
   <div id="test-container"></div>
 </html>
