--- a/packages/app/test/index.html
+++ b/packages/app/test/index.html
@@ -13,11 +13,11 @@
     <div id="qunit"></div>
     <div id="qunit-fixture"></div>
     <script src="http://localhost:8080/main.js"></script>
+    <script>
+      window.testing = false;
+    </script>
     <script src="https://code.jquery.com/qunit/qunit-2.10.0.js"></script>
     <script type="module" src="index.js"></script>
-    <script>
-      window.testing = true;
-    </script>
   </body>
   <div id="test-container"></div>
 </html>
