--- a/packages/test-lib/test/index.html
+++ b/packages/test-lib/test/index.html
@@ -16,7 +16,8 @@
       window.testing = true;
     </script>
     <!--
-      TODO we need to conditionally remove the main.js script in the node build
+      For local dev of catalogjs we use http://localhost:8080/main.js
+      Otherwise for production use https://install.catalogjs.com/main.js
     -->
     <script src="http://localhost:8080/main.js"></script>
     <script src="https://code.jquery.com/qunit/qunit-2.10.0.js"></script>
