url missing protocol

--- a/packages/test-app/index.html
+++ b/packages/test-app/index.html
@@ -4,5 +4,5 @@
   For local dev of catalogjs we use http://localhost:8080/main.js
   Otherwise for production use https://install.catalogjs.com/main.js
 -->
-<script src="localhost:8080/main.js"></script>
+<script src="http://localhost:8080/main.js"></script>
 <script type="module" src="./index.js"></script>
