--- a/packages/ember-app/app/index.html
+++ b/packages/ember-app/app/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script src="https://service-worker/main.js"></script>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>EmberApp</title>
